--- a/Documentation/devicetree/bindings/phy/phy-rockchip-inno-usb2.yaml
+++ b/Documentation/devicetree/bindings/phy/phy-rockchip-inno-usb2.yaml
@@ -115,6 +115,10 @@ properties:
           Phandle to a regulator that provides power to VBUS.
           See ./phy-bindings.txt for details.
 
+      vbus-supply:
+        description:
+          Phandle to a fixed-regulator that provides power to VBUS.
+
       rockchip,utmi-bypass-uart:
         $ref: /schemas/types.yaml#/definitions/flag
         description: when set, indicates that support usb to bypass uart
