phy: rockchip-inno-usb2: make u2phy enter low power mode
Make u2phy enter low power mode when suspend. If config the DT of
u2phy port with "rockchip,low-power-mode" property, the port will
be config to lower power state when suspend.

Bvalid irq and linestate irq will be disabled in this mode.

Change-Id: Ie7d40a9a181b0622b1f8d062a741661548cabd59
Signed-off-by: Meng Dongyang <daniel.meng@rock-chips.com>
Signed-off-by: Frank Wang <frank.wang@rock-chips.com>

--- a/Documentation/devicetree/bindings/phy/phy-rockchip-inno-usb2.yaml
+++ b/Documentation/devicetree/bindings/phy/phy-rockchip-inno-usb2.yaml
@@ -135,6 +135,10 @@ properties:
        $ref: /schemas/types.yaml#/definitions/flag
        description: when set, indicates that the otg vbus is always powered on.
 
+     rockchip,low-power-mode:
+       $ref: /schemas/types.yaml#/definitions/flag
+       description: when set, the port will enter low power state when suspend.
+
     required:
       - "#phy-cells"
       - interrupts
