regulator: add stub-regulator driver
Add a stub-regulator driver which can be used to simulate any
particular regulator.  This stub regulator driver must support
regulator_set_voltage() which is not possible via the existing
dummy regulator.  Stub regulator devices can be used to verify
that regulator consumers make correct regulator framework calls
before it is possible to implement true regulator control.

Change-Id: Ia73d245419e44d74712b813e58de1973112233c4
Signed-off-by: David Collins <collinsd@codeaurora.org>
Signed-off-by: Vivek Aknurwar <viveka@codeaurora.org>

--- a/drivers/regulator/Kconfig
+++ b/drivers/regulator/Kconfig
@@ -1432,4 +1432,14 @@ config REGULATOR_QCOM_LABIBB
 	  boost regulator and IBB can be used as a negative boost regulator
 	  for LCD display panel.
 
+config REGULATOR_STUB
+	tristate "Stub Regulator"
+	help
+	  This driver adds stub regulator support. It allows for consumers to
+	  request their regulator devices and to use all of the standard
+	  regulator functions. It is useful for bringing up new platforms when
+	  the real hardware based regulator implementation is not yet available.
+	  Consumers can use stub regulator device with proper constraint
+	  checking while the real regulator driver is being developed.
+
 endif
