Turn off Medusa Layer-0
1) It is not necessary split Medusa initialisation into two phases yet.
2) Hook medusa_l0_task_free() was called within an interrupt, and mutex_lock()
   in this function leaded to deadlock.
3) For future reuse, sources of Layer-0 are left in repository.

--- a/security/medusa/Makefile
+++ b/security/medusa/Makefile
@@ -8,7 +8,7 @@ subdir-$(CONFIG_SECURITY_MEDUSA)	+= l1
 subdir-$(CONFIG_SECURITY_MEDUSA)        += l2
 subdir-$(CONFIG_SECURITY_MEDUSA)        += l3
 
-obj-$(CONFIG_SECURITY_MEDUSA) += l0/
+#obj-$(CONFIG_SECURITY_MEDUSA) += l0/
 obj-$(CONFIG_SECURITY_MEDUSA) += l1/
 obj-$(CONFIG_SECURITY_MEDUSA) += l2/
 obj-$(CONFIG_SECURITY_MEDUSA) += l3/
