--- a/arch/lkl/include/asm/Kbuild
+++ b/arch/lkl/include/asm/Kbuild
@@ -35,6 +35,7 @@ generic-y += linkage.h
 generic-y += local.h
 generic-y += local64.h
 generic-y += mcs_spinlock.h
+generic-y += mmiowb.h
 generic-y += mmu.h
 generic-y += mmu_context.h
 generic-y += module.h
