phy: phy-rockchip-inno-usb2: add force IRQ wakeup control
Some chips like rk3328 not support wakeup-config in dts,
So we should set wakeup IRQ enable in driver if we need
new wakeup source.

Change-Id: I735eee54bb4943b8c85a9a477f1cf9d255fc4312
Signed-off-by: Zain Wang <wzz@rock-chips.com>
Signed-off-by: Frank Wang <frank.wang@rock-chips.com>

--- a/Documentation/devicetree/bindings/phy/phy-rockchip-inno-usb2.yaml
+++ b/Documentation/devicetree/bindings/phy/phy-rockchip-inno-usb2.yaml
@@ -56,6 +56,11 @@ properties:
     description:
       Phandle to the extcon device providing the cable state for the otg phy.
 
+  wakeup-source:
+    description:
+      Enable USB irq wakeup when suspend.
+      Only work when suspend wakeup-config is not work.
+
   rockchip,usbgrf:
     $ref: /schemas/types.yaml#/definitions/phandle
     description:
