soc: rockchip: Add ROCKCHIP_THUNDER_BOOT config
This option make the kernel boot faster.
Default n.

Change-Id: I918523621044e16953d5611ef9b0f2773746dae9
Signed-off-by: Tao Huang <huangtao@rock-chips.com>

--- a/drivers/soc/rockchip/Kconfig
+++ b/drivers/soc/rockchip/Kconfig
@@ -134,4 +134,10 @@ config ROCKCHIP_DEBUG
 	help
 	  Print dbgpcsr for every cpu when panic.
 
+config ROCKCHIP_THUNDER_BOOT
+	bool "Rockchip Thunder Boot support"
+	help
+	  Say y here to enable Rockchip thunder boot support.
+	  This option make the kernel boot faster.
+
 endif
