--- a/arch/arm/boot/dts/omap5.dtsi
+++ b/arch/arm/boot/dts/omap5.dtsi
@@ -516,6 +516,9 @@
 						status = "disabled";
 						clocks = <&dss_clkctrl OMAP5_DSS_CORE_CLKCTRL 8>;
 						clock-names = "fck";
+
+						#address-cells = <1>;
+						#size-cells = <0>;
 					};
 				};
 
@@ -547,6 +550,9 @@
 						status = "disabled";
 						clocks = <&dss_clkctrl OMAP5_DSS_CORE_CLKCTRL 8>;
 						clock-names = "fck";
+
+						#address-cells = <1>;
+						#size-cells = <0>;
 					};
 				};
 
