--- a/arch/arm/configs/rv1126_defconfig
+++ b/arch/arm/configs/rv1126_defconfig
@@ -215,6 +215,7 @@ CONFIG_VIDEO_ROCKCHIP_ISP=y
 CONFIG_VIDEO_ROCKCHIP_ISPP=y
 # CONFIG_MEDIA_SUBDRV_AUTOSELECT is not set
 CONFIG_VIDEO_IMX347=y
+CONFIG_VIDEO_IMX378=y
 CONFIG_VIDEO_OS04A10=y
 CONFIG_VIDEO_OV4689=y
 CONFIG_VIDEO_GC4C33=y
