--- a/drivers/media/i2c/Makefile
+++ b/drivers/media/i2c/Makefile
@@ -131,6 +131,7 @@ obj-$(CONFIG_VIDEO_IMX307)	+= imx307.o
 obj-$(CONFIG_VIDEO_IMX317)	+= imx317.o
 obj-$(CONFIG_VIDEO_IMX323)	+= imx323.o
 obj-$(CONFIG_VIDEO_IMX327)	+= imx327.o
+obj-$(CONFIG_VIDEO_IMX335)	+= imx335.o
 obj-$(CONFIG_VIDEO_IMX347)	+= imx347.o
 obj-$(CONFIG_VIDEO_IMX415)	+= imx415.o
 obj-$(CONFIG_VIDEO_GC0312)	+= gc0312.o
