--- a/drivers/media/platform/rockchip/cif/Makefile
+++ b/drivers/media/platform/rockchip/cif/Makefile
@@ -3,4 +3,5 @@ obj-$(CONFIG_VIDEO_ROCKCHIP_CIF) += video_rkcif.o
 video_rkcif-objs += dev.o \
 			capture.o \
 			mipi-csi2.o \
-			cif-luma.o
+			cif-luma.o \
+			hw.o
